all fails navbar code update and notes.html new fail update

--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,13 @@
 
   <div class="header-top">
     <img src="images/logo.png" alt="College Logo" class="logo-left" />
-    
-     <div class="header-texts">
-      <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd. <br>Science Senior College, Shahada</h2>
+
+    <div class="header-texts">
+      <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd. <br>Science
+        Senior College, Shahada</h2>
       <h1 class="dept-title-left">Department of Computer Science</h1>
     </div>
-    
+
     <div class="header-controls">
       <div id="date-time" class="date-time-3d">Loading time...</div>
     </div>
@@ -36,15 +37,18 @@
             <li><a href="lab_gallery.html">Lab Gallery</a></li>
           </ul>
         </li>
+
         <li class="dropdown">
           <a href="#" id="downloads-toggle">Student</a>
           <ul class="dropdown-menu" id="downloads-menu">
             <li><a href="syllabus.html">Syllabus</a></li>
+            <li><a href="notes.html">Notes</a></li>
             <li><a href="timetable.html">Timetable</a></li>
             <li><a href="student-corner.html">Student Corner</a></li>
-             <li><a href="https://cims.mastersofterp.in/">Online Admission</a></li>
+            <li><a href="https://cims.mastersofterp.in/">Online Admission</a></li>
           </ul>
         </li>
+
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </nav>
