--- a/department_team.html
+++ b/department_team.html
@@ -14,7 +14,8 @@
     <img src="images/logo.png" alt="College Logo" class="logo-left" />
 
     <div class="header-texts">
-      <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd. <br>Science Senior College, Shahada</h2>
+      <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd. <br>Science
+        Senior College, Shahada</h2>
       <h1 class="dept-title-left">Department of Computer Science</h1>
     </div>
 
@@ -42,6 +43,7 @@
           <a href="#" id="downloads-toggle">Student</a>
           <ul class="dropdown-menu" id="downloads-menu">
             <li><a href="syllabus.html">Syllabus</a></li>
+            <li><a href="notes.html">Notes</a></li>
             <li><a href="timetable.html">Timetable</a></li>
             <li><a href="student-corner.html">Student Corner</a></li>
             <li><a href="https://cims.mastersofterp.in/">Online Admission</a></li>
@@ -107,12 +109,12 @@
       <div class="faculty-card">
         <img src="images/department-team/manoj-d-salve.png" alt="manoj-d-salve" class="faculty-img">
         <h3><b>Manoj.D.Salve</b></h3>
-       <p><b>Assistant Professor</b></p>
+        <p><b>Assistant Professor</b></p>
         <p> <b>Department : </b>Computer Science</p>
         <p><b>Qualification : </b>M.Sc, B.Ed</p>
         <p><b>Experience : </b>5 year</p>
       </div>
-  
+
       <div class="faculty-card">
         <img src="images/department-team/Teacher 3.jpeg" alt="R.R.Chaudhari" class="faculty-img">
         <h3>Rushika.R.Chaudhari</h3>
