--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <img src="images/logo.png" alt="College Logo" class="logo-left" />
 
     <div class="header-texts">
-      <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd. <br>Science Senior College, Shahada</h2>
+      <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd. <br>Science
+        Senior College, Shahada</h2>
       <h1 class="dept-title-left">Department of Computer Science</h1>
     </div>
 
@@ -43,11 +44,13 @@
           <a href="#" id="downloads-toggle">Student</a>
           <ul class="dropdown-menu" id="downloads-menu">
             <li><a href="syllabus.html">Syllabus</a></li>
+            <li><a href="notes.html">Notes</a></li>
             <li><a href="timetable.html">Timetable</a></li>
             <li><a href="student-corner.html">Student Corner</a></li>
             <li><a href="https://cims.mastersofterp.in/">Online Admission</a></li>
           </ul>
         </li>
+
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </nav>
@@ -67,7 +70,7 @@
       <div class="founder-text">
         <h2>Founder </h2>
         <p>
-         <b> Dear Friends / Stakeholders,</b><br>
+          <b> Dear Friends / Stakeholders,</b><br>
           On behalf of the managing committee of S.T. Co-op Educational Society Ltd., Science Sr. College, Shahada I
           extend a hearty welcome to you on this beautiful, sacred campus & to our website as well. This campus of
           higher learning is famous as <strong>"Vishram Kaka Shaikshanik Sankul"</strong>. The city Shahada is situated
