--- a/student-corner.html
+++ b/student-corner.html
@@ -43,6 +43,7 @@
           <a href="#" id="downloads-toggle">Student</a>
           <ul class="dropdown-menu" id="downloads-menu">
             <li><a href="syllabus.html">Syllabus</a></li>
+            <li><a href="notes.html">Notes</a></li>
             <li><a href="timetable.html">Timetable</a></li>
             <li><a href="student-corner.html">Student Corner</a></li>
             <li><a href="https://cims.mastersofterp.in/">Online Admission</a></li>
