--- a/timetable.html
+++ b/timetable.html
@@ -14,7 +14,8 @@
     <img src="images/logo.png" alt="College Logo" class="logo-left" />
 
     <div class="header-texts">
-      <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd. <br>Science Senior College, Shahada</h2>
+      <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd. <br>Science
+        Senior College, Shahada</h2>
       <h1 class="dept-title-left">Department of Computer Science</h1>
     </div>
 
@@ -42,6 +43,7 @@
           <a href="#" id="downloads-toggle">Student</a>
           <ul class="dropdown-menu" id="downloads-menu">
             <li><a href="syllabus.html">Syllabus</a></li>
+            <li><a href="notes.html">Notes</a></li>
             <li><a href="timetable.html">Timetable</a></li>
             <li><a href="student-corner.html">Student Corner</a></li>
             <li><a href="https://cims.mastersofterp.in/">Online Admission</a></li>
@@ -54,7 +56,7 @@
   </header>
 
   <section class="download-section">
-<br>
+    <br>
     <!-- FYBSc -->
     <div class="fy-heading">FYBSc Computer Science - Time Table</div>
     <div class="table-container">
@@ -304,7 +306,7 @@
       <p>&copy; 2025 B.Sc. Computer Science Department.[ Create by Premkumar Patil ❤ ]</p>
     </div>
 
-    
+
   </footer>
 
 
