--- a/lab_gallery.html
+++ b/lab_gallery.html
@@ -7,13 +7,15 @@
   <title>Lab Gallery - B.Sc. Computer Science</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
   <div class="header-top">
     <img src="images/logo.png" alt="College Logo" class="logo-left" />
 
-     <div class="header-texts">
-      <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd. <br>Science Senior College, Shahada</h2>
+    <div class="header-texts">
+      <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd. <br>Science
+        Senior College, Shahada</h2>
       <h1 class="dept-title-left">Department of Computer Science</h1>
     </div>
 
@@ -41,6 +43,7 @@
           <a href="#" id="downloads-toggle">Student</a>
           <ul class="dropdown-menu" id="downloads-menu">
             <li><a href="syllabus.html">Syllabus</a></li>
+            <li><a href="notes.html">Notes</a></li>
             <li><a href="timetable.html">Timetable</a></li>
             <li><a href="student-corner.html">Student Corner</a></li>
             <li><a href="https://cims.mastersofterp.in/">Online Admission</a></li>
@@ -142,9 +145,9 @@
     </div>
   </section>
 
- <footer class="footer">
+  <footer class="footer">
     <div class="footer-container">
-     <div class="footer-column">
+      <div class="footer-column">
         <h3>About</h3>
         <p>
           According to rule of NMU Jalgoan the college has started from 10th July 2001 from accademic year 2001-2002,
@@ -167,7 +170,7 @@
         </p>
       </div>
 
-    <div class="footer-column">
+      <div class="footer-column">
         <h3>Quick Links</h3>
         <ul>
           <li><a href="#">Home</a></li>
