--- a/notes.html
+++ b/notes.html
@@ -1,207 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Classroom Notes</title>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: Arial, sans-serif;
-    }
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Classroom Notes</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
 
-    body {
-      background: #f4f4f4;
-      padding: 20px;
-    }
+        body {
+            background: #f4f4f4;
+            padding: 20px;
+        }
 
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
 
-    .search-container {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 20px;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
+        .search-container {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 20px;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
 
-    .search-container input {
-      padding: 10px;
-      font-size: 16px;
-      width: 250px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
+        .search-container input {
+            padding: 10px;
+            font-size: 16px;
+            width: 250px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
 
-    .search-container button {
-      padding: 10px 15px;
-      font-size: 16px;
-      border: none;
-      background-color: #4CAF50;
-      color: white;
-      border-radius: 5px;
-      cursor: pointer;
-    }
+        .search-container button {
+            padding: 10px 15px;
+            font-size: 16px;
+            border: none;
+            background-color: #4CAF50;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+        }
 
-    .search-container button#clearBtn {
-      background-color: #f44336;
-    }
+        .search-container button#clearBtn {
+            background-color: #f44336;
+        }
 
-    .card-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 15px;
-    }
+        .card-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 15px;
+        }
 
-    .card {
-      background: white;
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      cursor: pointer;
-      text-align: center;
-      transition: transform 0.2s ease;
-    }
+        .card {
+            background: white;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            cursor: pointer;
+            text-align: center;
+            transition: transform 0.2s ease;
+        }
 
-    .card:hover {
-      transform: scale(1.05);
-    }
+        .card:hover {
+            transform: scale(1.05);
+        }
 
-    .card h3 {
-      font-size: 18px;
-      margin-bottom: 10px;
-      color: #333;
-    }
+        .card h3 {
+            font-size: 18px;
+            margin-bottom: 10px;
+            color: #333;
+        }
 
-    @media (max-width: 500px) {
-      .search-container input {
-        width: 100%;
-      }
-    }
-  </style>
+        @media (max-width: 500px) {
+            .search-container input {
+                width: 100%;
+            }
+        }
+    </style>
 </head>
+
 <body>
     <div class="header-top">
-    <img src="images/logo.png" alt="College Logo" class="logo-left" />
+        <img src="images/logo.png" alt="College Logo" class="logo-left" />
 
-    <div class="header-texts">
-      <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd. <br>Science
-        Senior College, Shahada</h2>
-      <h1 class="dept-title-left">Department of Computer Science</h1>
+        <div class="header-texts">
+            <h2 class="college-name">Shahada Taluka Educational Society and Co-Op. Educational Society’s Ltd.
+                <br>Science
+                Senior College, Shahada
+            </h2>
+            <h1 class="dept-title-left">Department of Computer Science</h1>
+        </div>
+
+        <div class="header-controls">
+            <div id="date-time" class="date-time-3d">Loading time...</div>
+        </div>
     </div>
 
-    <div class="header-controls">
-      <div id="date-time" class="date-time-3d">Loading time...</div>
+    <header class="navbar-section">
+        <nav class="nav">
+
+            <ul class="nav-list">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="courses.html">Courses</a></li>
+                <li><a href="department_team.html">Department Team</a></li>
+
+                <li class="dropdown">
+                    <a href="#" id="lab-toggle">Lab</a>
+                    <ul class="dropdown-menu" id="lab-menu">
+                        <li><a href="labs.html">Lab Information</a></li>
+                        <li><a href="lab_gallery.html">Lab Gallery</a></li>
+                    </ul>
+                </li>
+
+                <li class="dropdown">
+                    <a href="#" id="downloads-toggle">Student</a>
+                    <ul class="dropdown-menu" id="downloads-menu">
+                        <li><a href="syllabus.html">Syllabus</a></li>
+                        <li><a href="notes.html">Notes</a></li>
+                        <li><a href="timetable.html">Timetable</a></li>
+                        <li><a href="student-corner.html">Student Corner</a></li>
+                        <li><a href="https://cims.mastersofterp.in/">Online Admission</a></li>
+                    </ul>
+                </li>
+
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <br>
+    <h1>Classroom Notes</h1>
+
+    <div class="search-container">
+        <input type="text" id="search" placeholder="Search subjects...">
+        <button id="searchBtn">Search</button>
+        <button id="clearBtn">Clear</button>
     </div>
-  </div>
 
-  <header class="navbar-section">
-    <nav class="nav">
-
-      <ul class="nav-list">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="courses.html">Courses</a></li>
-        <li><a href="department_team.html">Department Team</a></li>
-
-        <li class="dropdown">
-          <a href="#" id="lab-toggle">Lab</a>
-          <ul class="dropdown-menu" id="lab-menu">
-            <li><a href="labs.html">Lab Information</a></li>
-            <li><a href="lab_gallery.html">Lab Gallery</a></li>
-          </ul>
-        </li>
-
-        <li class="dropdown">
-          <a href="#" id="downloads-toggle">Student</a>
-          <ul class="dropdown-menu" id="downloads-menu">
-            <li><a href="syllabus.html">Syllabus</a></li>
-            <li><a href="notes.html">Notes</a></li>
-            <li><a href="timetable.html">Timetable</a></li>
-            <li><a href="student-corner.html">Student Corner</a></li>
-            <li><a href="https://cims.mastersofterp.in/">Online Admission</a></li>
-          </ul>
-        </li>
-
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-    </nav>
-  </header>
-<br>
-  <h1>Classroom Notes</h1>
-
-  <div class="search-container">
-    <input type="text" id="search" placeholder="Search subjects...">
-    <button id="searchBtn">Search</button>
-    <button id="clearBtn">Clear</button>
-  </div>
-
-  <div class="card-container">
-    <div class="card" data-name="Mathematics" data-link="https://classroom.google.com/c/NzkxMTg5MjUzNTQx">
-      <h3>Mathematics</h3>
-    </div>
-    <div class="card" data-name="Physics" data-link="https://classroom.google.com/physics">
-      <h3>Physics</h3>
-    </div>
-    <div class="card" data-name="Chemistry" data-link="https://classroom.google.com/chemistry">
-      <h3>Chemistry</h3>
-    </div>
-    <div class="card" data-name="Computer Science" data-link="https://classroom.google.com/computerscience">
-      <h3>Computer Science</h3>
-    </div>
-  </div>
-
-  
-  <footer class="footer">
-    <div class="footer-container">
-
-      <div class="footer-column">
-        <h3>About</h3>
-        <p>
-          According to rule of NMU Jalgoan the college has started from 10th July 2001 from accademic year 2001-2002,
-          with computer science and from the academic year 2004-2005 we have enhanced our tries and got the success to
-          start the latest and most useful field - Biotechnology
-        </p>
-      </div>
-
-      <div class="footer-column">
-        <h3>Contact Us</h3>
-        <p>
-          Science Sr. College, Shahada<br>
-          Dist. Nandurbar, Maharashtra<br>
-          Email: info@stcollege.aDr. Vishram Kaka educational campus science sr. college shahada
-          Dist. Nandurbar, Maharashtra 425409
-          +91 8788356600
-          02565- 223122
-          stcopscience@gmail.comc.in<br>
-          Phone: +91-1234567890
-        </p>
-      </div>
-
-      <div class="footer-column">
-        <h3>Quick Links</h3>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Courses</a></li>
-          <li><a href="#">Faculty</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </div>
+    <div class="card-container">
+        <div class="card" data-name="Mathematics" data-link="https://classroom.google.com/c/NzkxMTg5MjUzNTQx">
+            <h3>Software Engineering</h3>
+        </div>
+        <div class="card" data-name="Physics" data-link="https://classroom.google.com/c/NzgzMTAzMjg4MDEw">
+            <h3>Java Programming-1</h3>
+        </div>
+        <div class="card" data-name="Chemistry" data-link="https://classroom.google.com/c/Nzg4OTk4NTk4NjE4">
+            <h3>Python</h3>
+        </div>
 
     </div>
 
-    <div class="footer-bottom">
-      <p>&copy; 2025 B.Sc. Computer Science Department. [ Create by Premkumar Patil ❤ ]</p>
-    </div>
-  </footer>
+
+    <footer class="footer">
+        <div class="footer-container">
+
+            <div class="footer-column">
+                <h3>About</h3>
+                <p>
+                    According to rule of NMU Jalgoan the college has started from 10th July 2001 from accademic year
+                    2001-2002,
+                    with computer science and from the academic year 2004-2005 we have enhanced our tries and got the
+                    success to
+                    start the latest and most useful field - Biotechnology
+                </p>
+            </div>
+
+            <div class="footer-column">
+                <h3>Contact Us</h3>
+                <p>
+                    Science Sr. College, Shahada<br>
+                    Dist. Nandurbar, Maharashtra<br>
+                    Email: info@stcollege.aDr. Vishram Kaka educational campus science sr. college shahada
+                    Dist. Nandurbar, Maharashtra 425409
+                    +91 8788356600
+                    02565- 223122
+                    stcopscience@gmail.comc.in<br>
+                    Phone: +91-1234567890
+                </p>
+            </div>
+
+            <div class="footer-column">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Courses</a></li>
+                    <li><a href="#">Faculty</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+
+        </div>
+
+        <div class="footer-bottom">
+            <p>&copy; 2025 B.Sc. Computer Science Department. [ Create by Premkumar Patil ❤ ]</p>
+        </div>
+    </footer>
 
 
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
