--- a/syllabus.html
+++ b/syllabus.html
@@ -62,7 +62,7 @@
   <section class="p-6 max-w-7xl mx-auto">
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
 
-      <!----> FY B.Sc Computer -->
+      <!----FY B.Sc Computer -->
       <br>
       <h2 class="section-title">B.Sc. Computer Science</h2>
       <br>
