--- a/index.html
+++ b/index.html
@@ -88,6 +88,27 @@
     </div>
   </section>
 
+
+  <section class="vice-chairman">
+    <div class="hod-container">
+       <div class="founder-image">
+        <img src="images/vice chairman.jpg" alt="Founder Image" />
+      </div>
+      <div class="hod-info">
+        <h2>Hiralal Patil</h2>
+        <h3><b><u>Vice Chairman</u></b></h3>
+        <p>
+          <br>
+        <h3>Respected Hiralal Patel is the Vice Chairman of Shahada Taluka Education Society and Co-op. Society. and he is a big entrepreneur. He has an oil mill for oil seeds and other industries in Prakash. He takes time out of all his busy schedule to visit the college every time and always tries to ensure the all-round development of the students. </h3>
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <br>
+  <br>
+  <br>
+  <br>
   <section class="Principal">
     <div class="hod-container">
       <div class="hod-img">
@@ -117,29 +138,7 @@
     </div>
   </section>
 
-  <section class="hod-section">
-    <div class="hod-container">
-      <div class="hod-img">
-        <img src="images/department-team/ulhas-s-sonawane.jpg" alt="HOD Image" />
-      </div>
-      <div class="hod-info">
-        <h2>Ulhas.S.Sonawane</h2>
-        <h3><u><b>Vice Principal</b></u></h3>
-        <p>
-          <br>
-          Dear Students,
-          Welcome to the Department of Computer Science at <b>Shahada Taluka Educational Society and Co-Op. Educational
-            Society’s Ltd.</b> As Vice Principal, I, Prof. Ulhas S. Sonawane, feel honored to lead a department
-          committed to academic excellence, practical learning, and student empowerment.
-          Our mission is to provide high-quality education that equips young women with technical skills, creativity,
-          and strong values. We encourage you to engage fully in both academics and co-curricular activities. Let’s work
-          together to shape a successful and meaningful future.
-          Wishing you all the best on your educational journey!
-          <b>— Prof. Ulhas S. Sonawane</b>
-        </p>
-      </div>
-    </div>
-  </section>
+
 
   <footer class="footer">
     <div class="footer-container">
