--- a/notes.html
+++ b/notes.html
@@ -146,16 +146,16 @@
     </div>
 
     <div class="card-container">
-        <div class="card" data-name="Mathematics" data-link="https://classroom.google.com/c/NzkxMTg5MjUzNTQx">
+        <div class="card" data-name="Software Engineering" data-link="https://classroom.google.com/c/NzkxMTg5MjUzNTQx">
             <h3>Software Engineering</h3>
         </div>
-        <div class="card" data-name="Physics" data-link="https://classroom.google.com/c/NzgzMTAzMjg4MDEw">
+        <div class="card" data-name="Java Programming" data-link="https://classroom.google.com/c/NzgzMTAzMjg4MDEw">
             <h3>Java Programming-1</h3>
         </div>
-        <div class="card" data-name="Chemistry" data-link="https://classroom.google.com/c/Nzg4OTk4NTk4NjE4">
+        <div class="card" data-name="Python" data-link="https://classroom.google.com/c/Nzg4OTk4NTk4NjE4">
             <h3>Python</h3>
         </div>
-
+    
     </div>
 
 
