--- a/labs.html
+++ b/labs.html
@@ -181,6 +181,8 @@
 
     <!-- Incharge -->
     <div class="lab-incharge">
+        <div class="faculty-card">
+        <img src="" alt="Ganesh patil" class="faculty-img">
       <h2>Lab Incharge</h2>
       <p><strong>Mr. Ganesh Patil</strong><br>Computer Science Department</p>
     </div>
