--- a/timetable.html
+++ b/timetable.html
@@ -74,14 +74,25 @@
         </thead>
         <tbody>
           <tr>
-            <td><b>11:45 – 12:30 </b> <br>Room No.101</b></td>
-            <td><b>MIN-EL-111</b> <br>(USS)</td>
-            <td><b>MIN-EL-111</b> <br>(USS)</td>
-            <td><b>MIN-EL-111</b> <br>(USS)</td>
-            <td><b>MIN-MT-111</b> <br>(SP)</td>
-            <td><b>MIN-MT-111</b><br>(SP)</td>
-            <td><b>MIN-MT-111</b><br>(SP)</td>
+            <td><b>11:00 – 11:45 </b> <br>Room No.101</b></td>
+            <td><b>OE-MAR-114</b> <br>(PIP)</td>
+            <td><b>OE-MAR-114</b> <br>(PIP)</td>
+            <td><b>OE-MAR-114</b> <br>(PIP)</td>
+            <td><b>---</td>
+            <td><b>---</td>
+            <td><b>---</td>
           </tr>
+
+          <tr>
+            <td><b>11:45 – 12:30</b> <br>Room No.101</td>
+            <td><b>MIN-EL-111</b> <br>(USS)</td>
+            <td><b>MIN-EL-111</b> <br>(USS)</td>
+            <td><b>MIN-EL-111</b> <br>(USS)</td>
+            <td><b>VEC-ES-115</b> <br>(MMS)</td>
+            <td><b>VEC-ES-115</b> <br>(MMS)</td>
+            <td><b>VEC-ES-115</b> <br>(MMS)</td>
+          </tr>
+
           <tr>
             <td><b>11:45 – 12:30</b> <br>Room No.208</td>
             <td><b>MIN-PH-111</b> <br>(MMS)</td>
@@ -91,20 +102,22 @@
             <td><b>---</td>
             <td><b>---</td>
           </tr>
+
           <tr>
             <td><b>12:30 – 01:15</b> <br>Room No.101</td>
-            <td><b>MAJ-CS-111</b> <br>(AMK)</td>
-            <td><b>MAJ-CS-111</b> <br>(AMK)</td>
-            <td><b>MAJ-CS-111</b> <br>(AMK)</td>
-            <td><b>VEC-ES-115</b> <br>(MDS)</td>
-            <td><b>VEC-ES-115</b> <br>(MDS)</td>
-            <td><b>VEC-ES-115</b> <br>(MDS)</td>
+            <td><b>MIN-MT-111</b> <br>(DAP)</td>
+            <td><b>MIN-MT-111</b> <br>(DAP)</td>
+            <td><b>MIN-MT-111</b> <br>(DAP)</td>
+            <td><b>MIN-MT-111</b> <br>(DAP)</td>
+            <td><b>MIN-MT-111</b> <br>(DAP)</td>
+            <td><b>MIN-MT-111</b> <br>(DAP)</td>
           </tr>
+
           <tr>
             <td><b>1:30 – 02:15</b> <br>Room No.101</td>
-            <td><b>IKS-115 </b></td>
-            <td><b>IKS-115 </b></td>
-            <td><b>IKS-115 </b></td>
+            <td><b>IKS-115 </b>(SP)</td>
+            <td><b>IKS-115 </b>(SP)</td>
+            <td><b>IKS-115 </b>(SP)</td>
             <td><b>CS-NSS/SPORT</b></td>
             <td><b>CS-NSS/SPORT</b></td>
             <td><b>CS-NSS/SPORT</b></td>
@@ -112,12 +125,12 @@
 
           <tr>
             <td><b>2:15 – 03:00</b> <br>Room No.101</td>
-            <td><B><b>IKS-115AEC</b>-ENG-113 </B> <br>(VJ) </td>
-            <td><B>IKS-115AEC-ENG-113 </B> <br>(VJ) </td>
-            <td><B>IKS-115AEC-ENG-113 </B> <br>(VJ) </td>
-            <td><b>OE-MAR-114</b></td>
-            <td><b>OE-MAR-114</b></td>
-            <td><b>OE-MAR-114</b></td>
+            <td><B>AEC-ENG-113 </B> <br>(KD) </td>
+            <td><B>AEC-ENG-113 </B> <br>(KD) </td>
+            <td><B>AEC-ENG-113 </B> <br>(KD) </td>
+            <td><b>---</b></td>
+            <td><b>---</b></td>
+            <td><b>---</b></td>
           </tr>
 
           <tr>
@@ -150,8 +163,17 @@
         </thead>
         <tbody>
           <tr>
+            <td><b>11:00 – 11:45</b> <br>(Room No.203)</td>
+            <td><b>OE-MAR-114 </b><br>(MSC)</td>
+            <td><b>OE-MAR-114</b> <br>(MSC)</td>
+            <td><b>OE-MAR-114</b> <br>(MSC)</td>
+            <td><b>AEC-MAR-221</b> <br>(MSC)</td>
+            <td><b>AEC-MAR-221</b> <br>(MSC)</td>
+            <td><b>AEC-MAR-221</b> <br>(MSC)</td>
+          </tr>
+          <tr>
             <td><b>11:45 – 12:30</b> <br>(Room No.203)</td>
-            <td><b>SEC-CS-218-C++ </b><br>(MDS)</td>
+            <td><b>SEC-CS-218-C++</b> <br>(MDS)</td>
             <td><b>SEC-CS-218-C++</b> <br>(MDS)</td>
             <td><b>SEC-CS-218-C++</b> <br>(MDS)</td>
             <td><b>MAJ-CS-211-DS</b> <br>(AMK)</td>
@@ -163,38 +185,29 @@
             <td><b>MIN-ELE-214</b> <br>(USS)</td>
             <td><b>MIN-ELE-214</b> <br>(USS)</td>
             <td><b>MIN-ELE-214</b> <br>(USS)</td>
-            <td><b>MIN-ELE-215</b> <br>(USS)</td>
-            <td><b>MIN-ELE-215</b> <br>(USS)</td>
-            <td><b>MIN-ELE-215</b> <br>(USS)</td>
+            <td><b>MIN-ELE-214</b> <br>(USS)</td>
+            <td><b>MIN-ELE-214</b> <br>(USS)</td>
+            <td><b>MIN-ELE-214</b> <br>(USS)</td>
           </tr>
+
           <tr>
             <td><b>12:30 – 01:15</b> <br>(Room No.208)</td>
             <td><b>MIN-MTH-214</b> <br>(YP)</td>
             <td><b>MIN-MTH-214</b> <br>(YP)</td>
             <td><b>MIN-MTH-214</b> <br>(YP)</td>
-            <td><b>MIN-MTH-215</b> <br>(YP)</td>
-            <td><b>MIN-MTH-215</b> <br>(YP)</td>
-            <td><b>MIN-MTH-215</b> <br>(YP)</td>
+            <td><b>MIN-MTH-214</b> <br>(YP)</td>
+            <td><b>MIN-MTH-214</b> <br>(YP)</td>
+            <td><b>MIN-MTH-214</b> <br>(YP)</td>
           </tr>
 
           <tr>
             <td><b>01:30 – 02:15</b> <br>(Room No.203)</td>
-            <td><b>OE-ENG-215</b> <br>(VJ)</td>
-            <td><b>OE-ENG-215</b> <br>(VJ)</td>
-            <td><b>OE-ENG-215</b> <br>(VJ)</td>
-            <td><b>AEC-MR-221</b> <br>(--)</td>
-            <td><b>AEC-MR-221</b> <br>(--)</td>
-            <td><b>AEC-MR-221</b> <br>(--)</td>
-          </tr>
-
-          <tr>
-            <td><b>01:30 – 02:15</b> <br>(Room No.208)</td>
-            <td><b>OE-MAR-215</b> <br>(--)</td>
-            <td><b>OE-MAR-215</b> <br>(--)</td>
-            <td><b>OE-MAR-215</b> <br>(--)</td>
-            <td><b>AEC-HIN-221</b> <br>(SBT)</td>
-            <td><b>AEC-HIN-221</b> <br>(SBT)</td>
-            <td><b>AEC-HIN-221</b> <br>(SBT)</td>
+            <td><b>OE-ENG-215</b> <br>(KD)</td>
+            <td><b>OE-ENG-215</b> <br>(KD)</td>
+            <td><b>OE-ENG-215</b> <br>(KD)</td>
+            <td><b>AEC-HN-221</b> <br>(SBT)</td>
+            <td><b>AEC-HN-221</b> <br>(SBT)</td>
+            <td><b>AEC-HN-221</b> <br>(SBT)</td>
           </tr>
 
           <tr>
