--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <h3><b><u>Vice Chairman</u></b></h3>
         <p>
           <br>
-        <h3>Respected Hiralal Patel is the Vice Chairman of Shahada Taluka Education Society and Co-op. Society. and he is a big entrepreneur. He has an oil mill for oil seeds and other industries in Prakash. He takes time out of all his busy schedule to visit the college every time and always tries to ensure the all-round development of the students. </h3>
+        <h3>Respected Hiralal Patel Sir is the Vice Chairman of Shahada Taluka Education Society and Co-op. Society. and he is a big entrepreneur. He has an oil mill for oil seeds and other industries in Prakash. He takes time out of all his busy schedule to visit the college every time and always tries to ensure the all-round development of the students. </h3>
         </p>
       </div>
     </div>
