--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <img src="images/vice chairman.jpg" alt="Founder Image" />
       </div>
       <div class="hod-info">
-        <h2>Hiralal Patil</h2>
+        <h2>Hiralal Patel</h2>
         <h3><b><u>Vice Chairman</u></b></h3>
         <p>
           <br>
