--- a/labs.html
+++ b/labs.html
@@ -182,7 +182,7 @@
     <!-- Incharge -->
     <div class="lab-incharge">
         <div class="faculty-card">
-        <img src="images/department-team/lab incharg.jpeg" alt="Ganesh patil" class="faculty-img">
+        <img src="images/department-team/lab incharg.jpg" alt="Ganesh patil" class="faculty-img">
       <h2>Lab Incharge</h2>
       <p><strong>Mr. Ganesh Patil</strong><br>Computer Science Department</p>
     </div>
