--- a/department_team.html
+++ b/department_team.html
@@ -89,7 +89,7 @@
       </div>
 
       <div class="faculty-card">
-        <img src="images/department-team/Teacher 5.png" alt="Y.D.Patil" class="faculty-img">
+        <img src="images/department-team/Teacher 4.jpg" alt="Y.D.Patil" class="faculty-img">
         <h3><b>Yugandhara.D.Patil</b></h3>
         <p><b>HOD</b></p>
         <p><b>Department :</b> Mathematics</p>
@@ -142,7 +142,7 @@
       </div>
 
       <div class="faculty-card">
-        <img src="images/department-team/Teacher 6.png" alt="S" class="faculty-img">
+        <img src="images/department-team/Teacher 10.jpg" alt="S" class="faculty-img">
         <h3>Supriya.S.Patil</h3>
         <p><b>Assistant Professor</b></p>
         <p> <b>Department : </b>Mathematics</p>
