--- a/department_team.html
+++ b/department_team.html
@@ -98,7 +98,7 @@
       </div>
 
       <div class="faculty-card">
-        <img src="images/department-team/Teacher 1.jpeg" alt="S.M.Patil" class="faculty-img">
+        <img src="images/department-team/Teacher 5.jpg" alt="S.M.Patil" class="faculty-img">
         <h3><b>Sonali.M.Patil</b></h3>
         <p><b>Assistant Professor</b></p>
         <p> <b>Department : </b>Computer Science</p>
@@ -116,7 +116,7 @@
       </div>
 
       <div class="faculty-card">
-        <img src="images/department-team/Teacher 3.jpeg" alt="R.R.Chaudhari" class="faculty-img">
+        <img src="images/department-team/Teacher 7.jpg" alt="R.R.Chaudhari" class="faculty-img">
         <h3>Rushika.R.Chaudhari</h3>
         <p><b>Assistant Professor</b></p>
         <p> <b>Department : </b>Computer Science</p>
@@ -124,7 +124,7 @@
         <p><b>Experience : </b>2 year</p>
       </div>
       <div class="faculty-card">
-        <img src="images/department-team/Teacher 4.png" alt="N.T.Patil" class="faculty-img">
+        <img src="images/department-team/Teacher 8.jpg" alt="N.T.Patil" class="faculty-img">
         <h3><b>Neha.T.Patil</b></h3>
         <p><b>Assistant Professor</b></p>
         <p> <b>Department : </b>Computer Science</p>
@@ -133,7 +133,7 @@
       </div>
 
       <div class="faculty-card">
-        <img src="images/department-team/Teacher 2.jpeg" alt="P.A.Mali" class="faculty-img">
+        <img src="images/department-team/Teacher 9.jpg" alt="P.A.Mali" class="faculty-img">
         <h3>Pallavi.A.Mali</h3>
         <p><b>Assistant Professor</b></p>
         <p> <b>Department : </b>Computer Science</p>
