--- a/labs.html
+++ b/labs.html
@@ -184,7 +184,7 @@
         <div class="faculty-card">
         <img src="images/department-team/lab incharg.jpg" alt="Ganesh patil" class="faculty-img">
       <h2>Lab Incharge</h2>
-      <p><strong>Mr. Ganesh Patil</strong><br>Computer Science Department</p>
+      <p><strong>Mr. Ganesh Choudhary</strong><br>Computer Science Department</p>
     </div>
   </section>
 
